<resources>

<string name="btn0">0</string>
<string name="btn1">1</string>
<string name="btn2">2</string>
<string name="btn3">3</string>
<string name="btn4">4</string>
<string name="btn5">5</string>
<string name="btn6">6</string>
<string name="btn7">7</string>
<string name="btn8">8</string>
<string name="btn9">9</string>
<string name="btnPonto">.</string>
<string name="btnIgual">=</string>
<string name="btnLimpar">C</string>
<string name="btnDividir">/</string>
<string name="btnMultiplicar">X</string>
<string name="btnSomar">+</string>
<string name="btnSubtrair">-</string>

</resources>