<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/LayoutPrincipal"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/tvOperacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_weight="2"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="34dp"
        android:background="#CFCCCC"
        android:gravity="bottom|right"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/tvNumeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_weight="3"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="84dp"
        android:gravity="bottom|right"
        android:textSize="50dp"/>

    <LinearLayout
        android:id="@+id/layoutBotoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="14"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="104dp"
        android:background="#B2B0B0"
        >

        <LinearLayout
            android:id="@+id/firstColumn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:text="@string/btn7" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn4" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn1" />

            <Button
                android:id="@+id/btnPonto"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnPonto" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondColumn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btn8"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btn5"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btn2"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btn0"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/thirdColumn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btn9"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btn6"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btn3"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btnIgual"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/forthColumn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btnLimpar"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/imgBtnBackspace"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:backgroundTint="@color/purple_500"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_input_delete" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btnDividir"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnMultiplicacao"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btnMultiplicar"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnSoma"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btnSomar"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnSubtrair"
                android:layout_width="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_height="wrap_content"
                android:text="@string/btnSubtrair"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvAutoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Pablo Conte"
        android:gravity="bottom|right"
        />

</LinearLayout>